init model description / relation to desc. rule
